Fixed bug #45860 (header() function fails to correctly replace all Status lines)